Add asset management system with loader and comprehensive documentation
- Created assets/ directory structure (images, sounds, fonts)
- Implemented AssetLoader singleton class with caching
- Added asset path configuration (data/assets.json)
- Created comprehensive asset usage guide (ASSET_GUIDE.md)
- Added asset integration example (examples/asset_example.py)
- Updated project documentation to include asset system
- Modified MANIFEST.in and setup.py to include asset files
- Updated src/__init__.py to export asset_loader

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,8 @@ include LICENSE
 include requirements.txt
 recursive-include data *.json
 recursive-include src *.py
+recursive-include assets *.png *.jpg *.jpeg *.gif *.bmp
+recursive-include assets *.wav *.mp3 *.ogg
+recursive-include assets *.ttf *.otf
 global-exclude __pycache__
 global-exclude *.py[cod]
